--- a/source/less/blocks/html-academy.less
+++ b/source/less/blocks/html-academy.less
@@ -1,5 +1,31 @@
-.html-academy {
+.html-academy__link {
   display: flex;
-  justify-content: center;
   align-items: center;
+  text-decoration: none;
+}
+
+.html-academy__description {
+  .text-block__description();
+  margin-right: 12px;
+}
+
+
+.html-academy__link:hover .html-academy__description {
+  color: @blue;
+}
+
+.html-academy__link:active .html-academy__description {
+  color: @marron-social;
+}
+
+.html-academy__img {
+  fill: @black;
+}
+
+.html-academy__link:hover .html-academy__img {
+  fill: @blue;
+}
+
+.html-academy__link:active .html-academy__img {
+  fill: @marron-social;
 }
