--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -2,11 +2,17 @@
   list-style-type: none;
   background-color: @blue;
   margin: 0;
+  margin-bottom: 29px;
   padding: 0;
   .text-block__title();
-  z-index: 1;
   width: 100%;
-  display: none;
+  position: absolute;
+}
+
+@media (max-width: @mobile-width-only) {
+  .site-list {
+    z-index: 2;
+  }
 }
 
 @media (min-width: @tablet-width) {
@@ -14,22 +20,102 @@
     display: block;
     display: flex;
     justify-content: space-between;
+    background-color: @white;
+    color: @black;
+    margin: 0;
+    width: 768px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .site-list {
-    display: block;
+    box-sizing: border-box;
     display: flex;
     justify-content: space-between;
+    margin: 0;
+    width: 1200px;
   }
 }
 
-.site-list__item {
-  width: 320px;
-}
-
 .site-list__link {
+  display: block;
+  box-sizing: border-box;
+  min-height: 55px;
+  padding-top: 17px;
+  padding-bottom: 12px;
+  border-top: 1px solid rgba(1, 1, 1, 0.2);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
   color: @white;
   text-decoration: none;
+}
+
+@media (max-width: @mobile-width-only) {
+  .site-list__link:first-child {
+    border-top: none;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .site-list__item:nth-child(2) {
+    margin-right: 153px;
+  }
+}
+
+@media (max-width: @mobile-width-only) {
+  .site-list__link {
+    width: 320px;
+  }
+
+  .site-list__link:hover {
+    background-color: @blue-hover;
+  }
+
+  .site-list__link:active {
+    background-color: @blue-active;
+    color: rgba(255, 255, 255, 0.3);
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .site-list__link {
+    color: @black;
+    text-decoration: none;
+    .text-block__description();
+    font-weight: 700;
+    width: 153px;
+  }
+
+  .site-list__link--current {
+    color: @marron-link;
+  }
+
+  .site-list__link:hover {
+    color: @blue;
+  }
+
+  .site-list__link:active {
+    color: rgba(0, 0, 0, 0.3);
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .site-list__link {
+    color: @black;
+    text-decoration: none;
+    .text-block__description();
+    font-weight: 700;
+    width: 240px;
+  }
+
+  .site-list__link--current {
+    color: @marron-link;
+  }
+
+  .site-list__link:hover {
+    color: @blue;
+  }
+
+  .site-list__link:active {
+    color: rgba(0, 0, 0, 0.3);
+  }
 }
