--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -2,9 +2,45 @@
   list-style-type: none;
   margin: 34px 0 40px 0;
   padding: 0;
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.social__link {
+.social__button {
+  box-sizing: border-box;
+  display: flex;
+  width: 48px;
   text-decoration: none;
-  color: @black;
+  padding: 12px;
+}
+
+.social__button:last-child {
+  margin-right: 0;
+}
+
+.social__button:hover {
+  background-color: @blue-hover;
+}
+
+.social__button:active {
+  background-color: @blue-active;
+}
+
+.social__img {
+  fill: @white;
+  padding: 0;
+  margin: 0;
+  align-content: center;
+}
+
+.social__button:active .social__img {
+  fill: rgba(255, 255, 255, 0.3);
+}
+
+.social__item {
+  margin-right: 6px;
+}
+
+.social__button:nth-child(3) {
+  margin-right: 0;
 }
