--- a/source/less/blocks/about-form.less
+++ b/source/less/blocks/about-form.less
@@ -3,12 +3,17 @@
   padding: 36px 20px 28px 20px;
 }
 
+@media (max-width: @mobile-width-only) {
+  .about-form {
+    border-bottom: solid 1px @grey-button-hover;
+  }
+}
+
 @media (min-width: @tablet-width) {
   .about-form {
     width: 768px;
     box-sizing: border-box;
-    padding: 64px 166px 0px 166px;
-    margin-bottom: 102px;
+    padding: 64px 166px 102px 166px;
   }
 }
 
@@ -16,8 +21,7 @@
   .about-form {
     width: 1200px;
     box-sizing: border-box;
-    padding: 115px 383px 0px 383px;
-    margin-bottom: 67px;
+    padding: 115px 383px 67px 383px;
   }
 }
 
@@ -25,6 +29,27 @@
   .text-block__title();
 }
 
+@media (min-width: @tablet-width) {
+  .about-form__title {
+    .text-block__title ();
+    font-size: 30px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .about-form__title {
+    .text-block__title ();
+    font-size: 30px;
+  }
+}
+
 .about-form__description {
   .text-block__description();
+}
+
+@media (min-width: @tablet-width) {
+  .about-form__description {
+    .text-block__description();
+    line-height: 24px;
+  }
 }
