--- a/source/less/blocks/nav.less
+++ b/source/less/blocks/nav.less
@@ -1,8 +1,7 @@
 .nav {
-  display: flex;
-  flex-wrap: wrap;
-  margin: 0 auto;
-  width: 100%;
+  position: relative;
+  box-sizing: border-box;
+  width: 320px;
 }
 
 @media (min-width: @tablet-width) {
@@ -12,6 +11,7 @@
     justify-content: space-between;
     width: 768px;
     margin: 0 auto;
+    min-height: 56px;
   }
 }
 
@@ -22,14 +22,110 @@
     justify-content: space-between;
     width: 1200px;
     margin: 0 auto;
+    min-height: 56px;
   }
 }
 
-.nav__toggle {
-  background-image: url("img/icons/menu-mobile.svg");
-  background-size: 22px 22px;
-  background-repeat: no-repeat;
-  background-position: center;
+@media (max-width: @mobile-width-only) {
+  .nav--closed .nav {
+    display: none;
+  }
+
+  .nav--closed .site-list__item {
+    display: none;
+  }
+
+  .nav--closed .nav__img--opened {
+    display: none;
+  }
+
+  .nav--closed .nav__toggle {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 2;
+    display: block;
+    width: 56px;
+    height: 56px;
+    background-color: @white;
+    cursor: pointer;
+    border: none;
+  }
+
+  .nav--closed .nav__toggle .nav__img--closed {
+    display: block;
+    fill: @blue;
+    padding-left: 11px;
+    padding-right: 19px;
+  }
+
+  .nav--closed .nav__toggle:hover .nav__img--closed {
+    fill: rgba(129, 179, 210, 0.6);
+  }
+
+  .nav--closed .nav__toggle:active .nav__img--closed {
+    fill: rgba(129, 179, 210, 0.3);
+  }
+
+  .nav--nojs .nav__toggle .nav__img--closed {
+    display: none;
+  }
+
+  .nav--nojs .nav__toggle {
+    display: block;
+    background-color: @blue;
+  }
+
+  .nav--nojs .nav__toggle .nav__img--opened {
+    display: block;
+    fill: @white;
+    padding-left: 11px;
+    padding-right: 19px;
+  }
+
+  .nav--nojs .nav__wrapper {
+    position: static;
+    min-height: 0;
+  }
+
+  .nav--nojs .site-list__item {
+    display: block;
+    z-index: 3;
+  }
+
+  .nav--opened .nav__toggle {
+    box-sizing: border-box;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 3;
+    display: block;
+    width: 56px;
+    height: 56px;
+    background-color: @blue;
+    cursor: pointer;
+    border: none;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  }
+
+  .nav--opened .nav__img--closed {
+    display: none;
+  }
+
+  .nav--opened .nav__toggle .nav__img--opened {
+    display: block;
+    fill: @white;
+    padding-left: 11px;
+    padding-right: 19px;
+  }
+
+  .nav--opened .nav__toggle:hover .nav__img--opened {
+    fill: rgba(255, 255, 255, 0.6);
+  }
+
+  .nav--opened .nav__toggle:active .nav__img--opened {
+    fill: rgba(255, 255, 255, 0.3);
+  }
 }
 
 @media (min-width: @tablet-width) {
