--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -22,17 +22,9 @@
 
 @media (min-width: @desktop-width) {
   .page__container {
-    width: 1280px;
-    background-color: @grey-container;
-    margin: 0 auto;
-  }
-}
-
-@media (min-width: @desktop-width) {
-  .page__shadow {
     width: 1200px;
+    background-color: @white;
     margin: 0 auto;
-    background-color: #ffffff;
     box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2);
   }
 }
