--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -114,6 +114,18 @@
   height: 100%;
 }
 
+@media (min-width: @tablet-width) {
+  .advantages__img {
+    width: 512px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .advantages__img {
+    width: 800px;
+  }
+}
+
 .advantages__item--icon {
   position: relative;
   box-sizing: border-box;
