--- a/source/less/blocks/about-form.less
+++ b/source/less/blocks/about-form.less
@@ -5,9 +5,21 @@
 
 @media (max-width: @mobile-width-only) {
   .about-form {
+    position: relative;
     border-bottom: solid 1px @grey-button-hover;
   }
+
+  .about-form::after {
+    position: absolute;
+    right: 0;
+    top: 0;
+    content: url("../img/triangle-mobile.svg");
+    padding: 0;
+    margin-top: -57px;
+    width: 321px;
+  }
 }
+
 
 @media (min-width: @tablet-width) {
   .about-form {
