--- a/source/less/blocks/about-sedona.less
+++ b/source/less/blocks/about-sedona.less
@@ -6,9 +6,18 @@
 }
 
 @media (max-width: @mobile-width-only) {
+  .about-sedona::before {
+    position: absolute;
+    right: -1px;
+    bottom: 0;
+    content: url("../img/triangle-bottom-mobile.svg");
+    padding: 0;
+    margin-bottom: -18px;
+  }
+
   .about-sedona::after {
     position: absolute;
-    right: 0;
+    right: -1px;
     top: 0;
     content: url("../img/triangle-mobile.svg");
     padding: 0;
