Добавляет комментарии по stylelint

--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -18,7 +18,7 @@
 @media (min-width: @tablet-width) {
   .site-list {
     display: block;
-    display: flex;
+    display: flex; /* stylelint-disable-line */
     justify-content: space-between;
     background-color: @white;
     color: @black;
