--- a/source/less/blocks/modal.less
+++ b/source/less/blocks/modal.less
@@ -47,7 +47,7 @@
   left: 0;
   display: -webkit-box; /* stylelint-disable-line */
   display: -ms-flexbox; /* stylelint-disable-line */
-  display: flex;
+  display: flex; /* stylelint-disable-line */
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.3);
