--- a/source/less/blocks/welcome.less
+++ b/source/less/blocks/welcome.less
@@ -9,8 +9,10 @@
 }
 
 @media (min-resolution: 2dppx) {
+  .welcome {
   background-image: url("../img/welcome-mobile@2x.jpg");
   background-size: 320px auto;
+}
 }
 
 
@@ -75,8 +77,10 @@
 }
 
 @media (min-resolution: 2dppx) {
+  .welcome--catalog {
   background-image: url("../img/catalog/back-catalog-mobile@2x.jpg");
   background-size: 320px auto;
+}
 }
 
 
@@ -90,13 +94,15 @@
     background-size: 100% 100%;
     background-repeat: no-repeat;
     display: flex;
-  }
+
 
   @media (min-resolution: 2dppx) {
     background-image: url("../img/catalog/back-catalog-tablet@2x.jpg");
     background-size: 768px auto;
   }
 }
+}
+
 
 @media (min-width: @desktop-width) {
   .welcome--catalog {
@@ -107,12 +113,13 @@
     background-size: 100% 100%;
     background-repeat: no-repeat;
     display: flex;
-  }
+
 
   @media (min-resolution: 2dppx) {
     background-image: url("../img/catalog/back-catalog-desktop@2x.jpg");
     background-size: 1200px auto;
   }
+}
 }
 
 
