--- a/source/less/blocks/fotoalbum.less
+++ b/source/less/blocks/fotoalbum.less
@@ -34,7 +34,7 @@
 @media (min-width: @tablet-width) {
   .fotoalbum__item {
     display: grid;
-    grid-template-columns: 229px 95px;
+    grid-template-columns: 324px;
     padding: 0;
   }
 
@@ -54,7 +54,7 @@
 @media (min-width: @desktop-width) {
   .fotoalbum__item {
     display: grid;
-    grid-template-columns: 229px 171px;
+    grid-template-columns: 400px;
     padding: 0;
   }
 }
@@ -64,7 +64,7 @@
   .fotoalbum__item--first {
     grid-column: 1/-1;
     display: grid;
-    grid-template-columns: repeat(2, 324px);
+    grid-template-columns: 648px;
   }
 }
 
@@ -72,31 +72,54 @@
   .fotoalbum__item--first {
     grid-column: 1/-1;
     display: grid;
-    grid-template-columns: repeat(2, 600px);
+    grid-template-columns: 1200px;
   }
 }
 
 .fotoalbum__img {
   margin-top: 24px;
   margin-bottom: 15px;
+  object-fit: cover;
+  height: 100%;
 }
 
 @media (min-width: @tablet-width) {
   .fotoalbum__img {
+    width: 324px;
+    height: 267px;
     grid-column: 1/-1;
     padding: 0;
     margin: 0;
-    margin-bottom: 22px;
   }
 }
 
 
 @media (min-width: @desktop-width) {
-  .fotoalbum__img {
+  .fotoalbum__img,
+  .fotoalbum__picture-wrapper {
+    width: 400px;
+    height: 267px;
     grid-column: 1/-1;
     padding: 0;
     margin: 0;
     margin-bottom: -80px;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .fotoalbum__img--first-line {
+    grid-column: 1/-1;
+    width: 648px;
+    height: 400px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .fotoalbum__img--first-line,
+  .fotoalbum__picture-wrapper--first-line {
+    grid-column: 1/-1;
+    width: 1200px;
+    height: 400px;
   }
 }
 
@@ -147,7 +170,6 @@
     padding-left: 20px;
     padding-top: 20px;
     height: 80px;
-    background-color: rgba(1, 1, 1, 0.3);
   }
 }
 
@@ -170,7 +192,6 @@
     padding-top: 28px;
     padding-right: 20px;
     text-align: right;
-    background-color: rgba(1, 1, 1, 0.3);
   }
 }
 
@@ -202,5 +223,21 @@
 @media (min-width: @desktop-width) {
   .fotoalbum__number {
     color: @white;
+  }
+}
+
+
+@media (min-width: @tablet-width) {
+  .fotoalbum__wrapper {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .fotoalbum__wrapper {
+    display: flex;
+    justify-content: space-between;
+    background-color: rgba(1, 1, 1, 0.3);
   }
 }
