--- a/source/less/blocks/modal.less
+++ b/source/less/blocks/modal.less
@@ -1,6 +1,6 @@
 .modal {
   position: relative;
-  -webkit-box-sizing: border-box;
+  -webkit-box-sizing: border-box; /* stylelint-disable-line */
   box-sizing: border-box;
   margin: auto;
   background-color: @white;
@@ -45,9 +45,9 @@
   position: fixed;
   top: 0;
   left: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: -webkit-box; /* stylelint-disable-line */
+  display: -ms-flexbox; /* stylelint-disable-line */
+  display: flex; /* stylelint-disable-line */
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.3);
