index desktop pixel perfect

--- a/source/less/blocks/hashtag.less
+++ b/source/less/blocks/hashtag.less
@@ -3,8 +3,10 @@
   font-size: 21px;
   font-weight: 700;
   color: @black;
-  text-align: center;
+  text-align: right;
   line-height: 26px;
   text-transform: uppercase;
   margin: 0;
 }
+
+
