--- a/source/less/blocks/welcome.less
+++ b/source/less/blocks/welcome.less
@@ -62,7 +62,7 @@
     bottom: 0;
     content: url("../img/triangle-desktop.svg");
     padding: 0;
-    margin-bottom: -6px;
+    margin-bottom: -5px; /*7 модуль*/
   }
 }
 
