--- a/source/less/blocks/about-sedona.less
+++ b/source/less/blocks/about-sedona.less
@@ -46,6 +46,14 @@
   margin: 0;
   margin-bottom: 29px;
 }
+/*7 задание начало*/
+@media (min-width: @desktop-width) {
+.text-block__title {
+  font-size: 21px;
+  text-indent: -1px;
+}
+}
+/*7 задание конец*/
 
 .text-block__description {
   .text-block__description ();
