--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -69,7 +69,7 @@
 @media (min-width: @desktop-width) {
   .advantages__item {
     background-color: @grey-advantages;
-    padding: 43px 42px 62px 43px;
+    padding: 41px 42px 62px 43px;
   }
 }
 
@@ -91,6 +91,13 @@
   }
 }
 
+/*7 задание начало*/
+.advantages__text {
+  background-color: @blue;
+  padding: 39px 15px 35px 16px;
+}
+
+
 @media (min-width: @tablet-width) {
   .advantages__text {
     width: 256px;
@@ -103,10 +110,10 @@
   .advantages__text {
     width: 400px;
     box-sizing: border-box;
-    padding: 47px 53px 56px 52px;
+    padding: 48px 53px 56px 52px;
   }
 }
-
+/*7 задание конец - поменяла местами первый элемент и внесла изменения в паддинг*/
 .advantages__img {
   display: block;
   padding: 0;
@@ -145,7 +152,7 @@
 @media (min-width: @desktop-width) {
   .advantages__item--icon {
     margin: 0;
-    padding: 158px 58px 79px 46px;
+
   }
 }
 
@@ -170,6 +177,7 @@
     background-image: url("../img/icons/house-desktop.svg");
     background-repeat: no-repeat;
     background-position: 161px 59px;
+    padding: 158px 48px 79px 46px;
   }
 }
 
@@ -177,6 +185,10 @@
   background-image: url("../img/icons/food-mobile.svg");
   background-repeat: no-repeat;
   background-position: 23px 18px;
+
+  br {
+    display: none;
+  }
 }
 
 @media (min-width: @tablet-width) {
@@ -191,7 +203,11 @@
   .advantages__item--food {
     background-image: url("../img/icons/burger-desktop.svg");
     background-repeat: no-repeat;
-    background-position: 161px 59px;
+    background-position: 161px 63px;
+    padding: 158px 42px 79px 46px;
+br {
+  display: block;
+}
   }
 }
 
@@ -199,6 +215,9 @@
   background-image: url("../img/icons/souvenir-mobile.svg");
   background-repeat: no-repeat;
   background-position: 23px 18px;
+  br {
+    display: none;
+  }
 }
 
 @media (min-width: @tablet-width) {
@@ -213,23 +232,53 @@
   .advantages__item--souvenir {
     background-image: url("../img/icons/souvenir-desktop.svg");
     background-repeat: no-repeat;
-    background-position: 161px 59px;
-  }
-}
+    background-position: 167px 58px;
+    padding: 158px 43px 79px 46px;
 
-.advantages__text {
-  background-color: @blue;
-  padding: 39px 15px 35px 16px;
+    br {
+      display: block;
+    }
+  }
 }
 
 .advantages__title {
   .text-block__title();
   margin-bottom: 22px;
+  br {
+    display: none;
+   }
+}
+
+@media (min-width: @desktop-width) {
+.advantages__title {
+ font-size: 21px;
+  margin-bottom: 14px;
+ br {
+  display: block;
+ }
+}
 }
 
 .advantages__title--white-theme {
   color: @white;
+
+  br {
+    display: none;
+  }
 }
+
+/*7 модуль начало*/
+@media (min-width: @desktop-width) {
+  .advantages__title--white-theme {
+    font-size: 21px;
+    margin-bottom: 13px;
+
+    br {
+      display: block;
+    }
+  }
+  }
+/*7 модуль конец*/
 
 .advantages__title--icon {
   text-align: left;
@@ -245,7 +294,8 @@
 
 @media (min-width: @desktop-width) {
   .advantages__title--icon {
-    margin-bottom: 28px;
+    font-size: 21px;
+    margin-bottom: 24px;
     text-align: center;
   }
 }
@@ -253,6 +303,9 @@
 .advantages__description {
   .text-block__description();
   margin-bottom: 17px;
+  br {
+    display: none;
+  }
 }
 
 @media (min-width: @tablet-width) {
@@ -263,7 +316,10 @@
 
 @media (min-width: @desktop-width) {
   .advantages__description {
-    margin-bottom: 32px;
+    margin-bottom: 24px; /*7 задание*/
+    br {
+      display: block;
+    }
   }
 }
 
@@ -273,6 +329,17 @@
 
 .advantages__description--white-theme {
   color: @white;
+  br{
+    display: none;
+  }
+}
+
+@media (min-width: @desktop-width) {
+.advantages__description--white-theme {
+  br{
+    display: block;
+  }
+}
 }
 
 .advantages__description--icon {
@@ -302,5 +369,6 @@
 @media (min-width: @desktop-width) {
   .advantages__text--bridge {
     order: 2;
+    padding: 50px 53px 56px 52px;
   }
 }
