--- a/source/less/blocks/find-hotel.less
+++ b/source/less/blocks/find-hotel.less
@@ -16,7 +16,7 @@
   .find-hotel {
     width: 1200px;
     box-sizing: border-box;
-    padding: 61px 371px 66px 371px;
+    padding: 59px 371px 66px 371px;
   }
 }
 
@@ -53,14 +53,18 @@
 
 @media (min-width: @desktop-width) {
   .find-hotel__title {
-    .text-block__title();
-    margin-bottom: 39px;
+  font-size: 30px;
+    margin-bottom: 32px;
   }
 }
 
 .find-hotel__description {
   .text-block__description();
   margin-bottom: 34px;
+
+  br {
+    display: none;
+  }
 }
 
 @media (min-width: @tablet-width) {
@@ -72,7 +76,9 @@
 
 @media (min-width: @desktop-width) {
   .find-hotel__description {
-    .text-block__description();
     margin-bottom: 46px;
+    br {
+      display: block;
+    }
   }
 }
